--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 { id: 'ribbon_cake', name: 'Ribbon Cake', category: 'Cakes', price: 600, unit: '1 kg', description: 'Classic layered ribbon cake with light, colorful icing.', image_file: 'images/ribbon_cake.jpg' },
 
                 { id: 'rose_cookies', name: 'Rose Cookies', category: 'Sweets', price: 80, unit: '10 pcs', description: 'Crispy, flower-shaped deep-fried cookies (Achappam).', image_file: 'images/rose_cookies.jpg' },
-                { id: 'kal_kals', name: 'Jaggery Kal Kals', category: 'Sweets', price: 400, unit: '1 kg', description: 'Traditional Christmas sweet shell-shaped pastries coated in jaggery syrup.', image_file: 'images/jaggery_kal_kals.jpg' },
+                { id: 'kal_kals', name: 'Jaggery Kal Kals', category: 'Sweets', price: 400, unit: '1 kg', description: 'Traditional Christmas sweet shell-shaped pastries coated in jaggery syrup.', image_file: 'images/jaggery_kal_kals1.jpg' },
                 { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', price: 450, unit: '1 kg', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/sweet_coconut_puffs.jpg' },
                 { id: 'adrasams', name: 'Adrasams', category: 'Sweets', price: 420, unit: '1 kg', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams.jpg' },
                 { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', price: 860, unit: '1 kg', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese.jpg' },
