--- a/index.html
+++ b/index.html
@@ -204,18 +204,18 @@
             const rawProducts = [
                 { id: 'rum_cake', name: 'Rum Cake', category: 'Cakes', price: 750, unit: '1 kg', description: 'Rich, moist cake soaked in rum—a traditional Christmas favorite.', image_file: 'images/rum_cake.jpg' },
                 { id: 'wine_cake', name: 'Wine Cake', category: 'Cakes', price: 700, unit: '1 kg', description: 'A delicate cake baked with fine wine, perfect for the festive table.', image_file: 'images/wine_cake.jpg' },
-                { id: 'ribbon_cake', name: 'Ribbon Cake', category: 'Cakes', price: 600, unit: '1 kg', description: 'Classic layered ribbon cake with light, colorful icing.', image_file: 'images/ribbon_cake.jpg' },
+                { id: 'ribbon_cake', name: 'Ribbon Cake', category: 'Cakes', price: 600, unit: '1 kg', description: 'Classic layered ribbon cake with light, colorful icing.', image_file: 'images/ribbon cake.jpg' },
 
                 { id: 'rose_cookies', name: 'Rose Cookies', category: 'Sweets', price: 80, unit: '10 pcs', description: 'Crispy, flower-shaped deep-fried cookies (Achappam).', image_file: 'images/rose_cookies.jpg' },
                 { id: 'kal_kals', name: 'Jaggery Kal Kals', category: 'Sweets', price: 400, unit: '1 kg', description: 'Traditional Christmas sweet shell-shaped pastries coated in jaggery syrup.', image_file: 'images/jaggery_kal_kals1.jpg' },
                 { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', price: 450, unit: '1 kg', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/sweet_coconut_puffs.jpg' },
-                { id: 'adrasams', name: 'Adrasams', category: 'Sweets', price: 420, unit: '1 kg', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams.jpg' },
+                { id: 'adrasams', name: 'Adrasams', category: 'Sweets', price: 420, unit: '1 kg', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams_1.jpg' },
                 { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', price: 860, unit: '1 kg', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese.jpg' },
                 { id: 'sweet_biscuit', name: 'Sweet Biscuit', category: 'Sweets', price: 450, unit: '1 kg', description: 'Simple, sweet homemade biscuits.', image_file: 'images/sweet_biscuit.jpg' },
 
                 { id: 'masala_murukulu', name: 'Masala Murukulu', category: 'Savouries', price: 450, unit: '1 kg', description: 'Spicy, crunchy spiral snack with aromatic spices.', image_file: 'images/masala_murukulu.jpg' },
                 { id: 'masala_murukulu_stick', name: 'Masala Murukulu Stick', category: 'Savouries', price: 450, unit: '1 kg', description: 'Crispy stick-shaped version of the spicy murukulu.', image_file: 'images/masala_murukulu.jpg' }, // Reusing image if specific stick image isn't available
-                { id: 'sakinula', name: 'Sakinula', category: 'Savouries', price: 480, unit: '1 kg', description: 'A traditional Telangana delicacy, thin crispy spirals.', image_file: 'images/sakinula.jpg' },
+                { id: 'sakinula', name: 'Sakinalu', category: 'Savouries', price: 480, unit: '1 kg', description: 'A traditional Telangana delicacy, thin crispy spirals.', image_file: 'images/sakinula.jpg' },
                 { id: 'palli_murukulu_papad', name: 'Palli Murukulu Papad', category: 'Savouries', price: 480, unit: '1 kg', description: 'Crunchy snack combined with groundnuts (palli).', image_file: 'images/masala_murukulu.jpg' }, // Reusing image
                 { id: 'namkeen_murukulu', name: 'Namkeen Murukulu', category: 'Savouries', price: 480, unit: '1 kg', description: 'Classic savory and salty murukulu snack.', image_file: 'images/masala_murukulu.jpg' }, // Reusing image
                 { id: 'palli_murukulu_small', name: 'Palli Murukulu Small', category: 'Savouries', price: 450, unit: '1 kg', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu.jpg' }, // Reusing image
