--- a/index.html
+++ b/index.html
@@ -208,17 +208,17 @@
 
                 { id: 'rose_cookies', name: 'Rose Cookies', category: 'Sweets', price: 80, unit: '10 pcs', description: 'Crispy, flower-shaped deep-fried cookies (Achappam).', image_file: 'images/rose_cookies.jpg' },
                 { id: 'kal_kals', name: 'Jaggery Kal Kals', category: 'Sweets', price: 400, unit: '1 kg', description: 'Traditional Christmas sweet shell-shaped pastries coated in jaggery syrup.', image_file: 'images/jaggery_kal_kals1.jpg' },
-                { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', price: 450, unit: '1 kg', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/sweet_coconut_puffs.jpg' },
+                { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', price: 450, unit: '1 kg', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/sweet_coconut_puffs1.jpg' },
                 { id: 'adrasams', name: 'Adrasams', category: 'Sweets', price: 420, unit: '1 kg', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams_1.jpg' },
                 { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', price: 860, unit: '1 kg', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese.jpg' },
                 { id: 'sweet_biscuit', name: 'Sweet Biscuit', category: 'Sweets', price: 450, unit: '1 kg', description: 'Simple, sweet homemade biscuits.', image_file: 'images/sweet_biscuit.jpg' },
 
                 { id: 'masala_murukulu', name: 'Masala Murukulu', category: 'Savouries', price: 450, unit: '1 kg', description: 'Spicy, crunchy spiral snack with aromatic spices.', image_file: 'images/masala_murukulu.jpg' },
-                { id: 'masala_murukulu_stick', name: 'Masala Murukulu Stick', category: 'Savouries', price: 450, unit: '1 kg', description: 'Crispy stick-shaped version of the spicy murukulu.', image_file: 'images/masala_murukulu.jpg' }, // Reusing image if specific stick image isn't available
+                { id: 'masala_murukulu_stick', name: 'Masala Murukulu Stick', category: 'Savouries', price: 450, unit: '1 kg', description: 'Crispy stick-shaped version of the spicy murukulu.', image_file: 'images/masala_murukulu_stick.jpg' }, // Reusing image if specific stick image isn't available
                 { id: 'sakinula', name: 'Sakinalu', category: 'Savouries', price: 480, unit: '1 kg', description: 'A traditional Telangana delicacy, thin crispy spirals.', image_file: 'images/sakinula.jpg' },
-                { id: 'palli_murukulu_papad', name: 'Palli Murukulu Papad', category: 'Savouries', price: 480, unit: '1 kg', description: 'Crunchy snack combined with groundnuts (palli).', image_file: 'images/masala_murukulu.jpg' }, // Reusing image
-                { id: 'namkeen_murukulu', name: 'Namkeen Murukulu', category: 'Savouries', price: 480, unit: '1 kg', description: 'Classic savory and salty murukulu snack.', image_file: 'images/masala_murukulu.jpg' }, // Reusing image
-                { id: 'palli_murukulu_small', name: 'Palli Murukulu Small', category: 'Savouries', price: 450, unit: '1 kg', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu.jpg' }, // Reusing image
+                { id: 'palli_murukulu_papad', name: 'Palli Murukulu Papad', category: 'Savouries', price: 480, unit: '1 kg', description: 'Crunchy snack combined with groundnuts (palli).', image_file: 'images/palli_murukulu_papad.jpg' }, // Reusing image
+                { id: 'namkeen_murukulu', name: 'Namkeen Murukulu', category: 'Savouries', price: 480, unit: '1 kg', description: 'Classic savory and salty murukulu snack.', image_file: 'images/namkeen_murukulu.jpg' }, // Reusing image
+                { id: 'palli_murukulu_small', name: 'Palli Murukulu Small', category: 'Savouries', price: 450, unit: '1 kg', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/palli_murukulu_small.jpg' }, // Reusing image
                 
                 { id: 'salted_beef', name: 'Salted Beef (Raw)', category: 'Meat', price: 750, unit: '1 kg', description: 'High-quality raw salted beef, ready for curing or cooking.', image_file: 'images/salted_beef.jpg' },
             ];
