--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', price: 450, unit: '1 kg', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/coconut_puffs.jpg' },
                 { id: 'adrasams', name: 'Adrasams', category: 'Sweets', price: 420, unit: '1 kg', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams_1.jpg' },
                 { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', price: 860, unit: '1 kg', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese.jpg' },
-                { id: 'sweet_biscuit', name: 'Sweet Biscuit', category: 'Sweets', price: 450, unit: '1 kg', description: 'Simple, sweet homemade biscuits.', image_file: 'images/sweet_biscuit.jpg' },
+                { id: 'sweet_biscuit', name: 'Sweet Biscuit', category: 'Sweets', price: 450, unit: '1 kg', description: 'Simple, sweet homemade biscuits.', image_file: 'images/sweet_biscuits.jpg' },
 
                 { id: 'masala_murukulu', name: 'Masala Murukulu', category: 'Savouries', price: 450, unit: '1 kg', description: 'Spicy, crunchy spiral snack with aromatic spices.', image_file: 'images/masala_murukulu.jpg' },
                 { id: 'masala_murukulu_stick', name: 'Masala Murukulu Stick', category: 'Savouries', price: 450, unit: '1 kg', description: 'Crispy stick-shaped version of the spicy murukulu.', image_file: 'images/masala_murukulu_stick.jpg' }, // Reusing image if specific stick image isn't available
