--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 { id: 'kal_kals', name: 'Jaggery Kal Kals', category: 'Sweets', price: 400, unit: '1 kg', description: 'Traditional Christmas sweet shell-shaped pastries coated in jaggery syrup.', image_file: 'images/jaggery_kal_kals1.jpg' },
                 { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', price: 450, unit: '1 kg', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/coconut_puffs.jpg' },
                 { id: 'adrasams', name: 'Adrasams', category: 'Sweets', price: 420, unit: '1 kg', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams_1.jpg' },
-                { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', price: 860, unit: '1 kg', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese.jpg' },
+                { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', price: 860, unit: '1 kg', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese1.jpg' },
                 { id: 'sweet_biscuit', name: 'Sweet Biscuit', category: 'Sweets', price: 450, unit: '1 kg', description: 'Simple, sweet homemade biscuits.', image_file: 'images/sweet_biscuits.jpg' },
 
                 { id: 'masala_murukulu', name: 'Masala Murukulu', category: 'Savouries', price: 450, unit: '1 kg', description: 'Spicy, crunchy spiral snack with aromatic spices.', image_file: 'images/masala_murukulus.jpg' },
