--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- WhatsApp Icon (Custom SVG) -->
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M12.04 2c-5.46 0-9.9 4.44-9.9 9.9 0 1.75.52 3.42 1.49 4.87l-1.55 5.67 5.8-1.51c1.42.78 3.02 1.21 4.16 1.21.03 0 .06 0 .09 0 5.46 0 9.9-4.44 9.9-9.9.01-5.46-4.43-9.9-9.9-9.9zm4.78 13.56c-.23.63-1.07 1.07-1.55 1.13-.5.06-.94.03-1.4-.13-.46-.15-1.07-.3-2.38-1.01-1.63-.9-2.65-2.42-2.85-2.71-.2-.3-.18-.55 0-.82.17-.23.37-.47.59-.72.2-.24.2-.42.3-.64.08-.2.04-.37-.02-.52-.08-.16-.54-1.3-.74-1.78-.2-.47-.41-.4-.54-.42-.14-.02-.29-.02-.45-.02h-.42c-.15 0-.41.05-.63.31-.22.25-.85.83-.85 2.01 0 1.18.87 2.33.99 2.49.12.16 1.71 2.62 4.14 3.65 2.43 1.02 2.91.87 3.45.81.54-.06 1.07-.44 1.23-.74.16-.3.16-.56.11-.74-.06-.18-.23-.29-.48-.41z"/></svg>
         </a>
-        <a href="tel:9398352048" class="fab bg-christmas-red text-white" title="Call Now">
+        <a href="tel:9391339396" class="fab bg-christmas-red text-white" title="Call Now">
             <!-- Phone Icon (Lucide Icon alternative) -->
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-4.72-4.72 19.79 19.79 0 0 1-3.07-8.63A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
@@ -218,7 +218,7 @@
                 { id: 'sakinula', name: 'Sakinalu', category: 'Savouries', price: 480, unit: '1 kg', description: 'A traditional Telangana delicacy, thin crispy spirals.', image_file: 'images/sakinula.jpg' },
                 { id: 'palli_murukulu_papad', name: 'Palli Murukulu Papad', category: 'Savouries', price: 480, unit: '1 kg', description: 'Crunchy snack combined with groundnuts (palli).', image_file: 'images/palli_murukulu_papad.jpg' }, // Reusing image
                 { id: 'namkeen_murukulu', name: 'Namkeen Murukulu', category: 'Savouries', price: 480, unit: '1 kg', description: 'Classic savory and salty murukulu snack.', image_file: 'images/namkeen_murukulu.jpg' }, // Reusing image
-                { id: 'palli_murukulu_small', name: 'Palli Murukulu Small', category: 'Savouries', price: 450, unit: '1 kg', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/palli_murukulu_small.jpg' }, // Reusing image
+                { id: 'masala_murukulu_small', name: 'Masala Murukulu Small', category: 'Savouries', price: 450, unit: '1 kg', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu_small.jpg' }, // Reusing image
                 
                 { id: 'salted_beef', name: 'Salted Beef (Raw)', category: 'Meat', price: 750, unit: '1 kg', description: 'High-quality raw salted beef, ready for curing or cooking.', image_file: 'images/salted_beef.jpg' },
             ];
