--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
                 { id: 'masala_murukulu_stick', name: 'Masala Murukulu Stick', category: 'Savouries', price: 450, unit: '1 kg', description: 'Crispy stick-shaped version of the spicy murukulu.', image_file: 'images/masala_murukulu_stick.jpg' }, // Reusing image if specific stick image isn't available
                 { id: 'sakinula', name: 'Sakinalu', category: 'Savouries', price: 480, unit: '1 kg', description: 'A traditional Telangana delicacy, thin crispy spirals.', image_file: 'images/sakinula.jpg' },
                 { id: 'palli_murukulu_papad', name: 'Palli Murukulu Papad', category: 'Savouries', price: 480, unit: '1 kg', description: 'Crunchy snack combined with groundnuts (palli).', image_file: 'images/palli_murukulu_papad.jpg' }, // Reusing image
-                { id: 'namkeen_murukulu', name: 'Namkeen Murukulu', category: 'Savouries', price: 480, unit: '1 kg', description: 'Classic savory and salty murukulu snack.', image_file: 'images/namkeen_murukulu.jpg' }, // Reusing image
-                { id: 'masala_murukulu_small', name: 'Masala Murukulu Small', category: 'Savouries', price: 450, unit: '1 kg', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu_small.jpg' }, // Reusing image
+                { id: 'masala_murukulu_small', name: 'Masala Murukulu', category: 'Savouries', price: 450, unit: '1 kg', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu_small.jpg' }, // Reusing image
                 
                 { id: 'salted_beef', name: 'Salted Beef (Raw)', category: 'Meat', price: 750, unit: '1 kg', description: 'High-quality raw salted beef, ready for curing or cooking.', image_file: 'images/salted_beef.jpg' },
             ];
