--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 
     <!-- Product Configuration Modal (Replaces Quick View) -->
     <div id="quickview-modal" class="fixed inset-0 bg-gray-900 bg-opacity-75 z-40 hidden flex items-center justify-center p-4" aria-modal="true" role="dialog">
-        <div class="bg-white rounded-xl shadow-2xl max-w-lg w-full transform scale-0 transition-transform duration-300 ease-out" id="quickview-content">
+        <!-- MODAL CONTENT: max-h-[90vh] and overflow-y-auto added here -->
+        <div class="bg-white rounded-xl shadow-2xl max-w-lg w-full max-h-[90vh] overflow-y-auto transform scale-0 transition-transform duration-300 ease-out" id="quickview-content">
             <div class="p-6">
                 <div class="flex justify-between items-start border-b pb-3 mb-4">
                     <h3 id="quickview-title" class="text-2xl font-bold text-accent-dark">Item Details</h3>
@@ -161,8 +162,9 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-6 h-6"><path d="M18 6L6 18M6 6l12 12"></path></svg>
                     </button>
                 </div>
-                <!-- Image Tag -->
-                <img id="quickview-image" class="w-full h-auto rounded-lg mb-4 border border-gray-200" src="" alt="Product Image" onerror="this.onerror=null; this.src='https://placehold.co/400x300/FDD835/3D0000?text=Image+Unavailable';">
+                <!-- Image Tag: max-h-56 and object-cover added here to frame the image -->
+                <img id="quickview-image" class="w-full max-h-56 object-cover rounded-lg mb-4 border border-gray-200" src="" alt="Product Image" onerror="this.onerror=null; this.src='https://placehold.co/400x300/FDD835/3D0000?text=Image+Unavailable';">
+                
                 <p id="quickview-description" class="text-gray-600 mb-4"></p>
                 
                 <!-- Configuration Options -->
@@ -463,7 +465,7 @@
             // --- Cart Logic ---
 
             function updateCartCount() {
-                const totalItems = cart.reduce((sum, item) => sum + item.quantity, 0);
+                const totalItems = cart.reduce((sum, item) => sum + item.orderQuantity, 0); // Corrected to use orderQuantity
                 cartCountElement.textContent = totalItems;
             }
 
@@ -485,7 +487,7 @@
                 const existingItem = cart.find(item => item.uniqueId === uniqueId);
 
                 if (existingItem) {
-                    // If the exact same configuration exists, increment the main quantity count (not the config quantity)
+                    // If the exact same configuration exists, increment the main orderQuantity count
                     existingItem.orderQuantity += 1;
                 } else {
                     // Add new item to cart
