--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 Freshly made with love by Isabel Besterwitch D'Cruz.
             </p>
             <div class="inline-block px-6 py-2 bg-christmas-gold text-accent-dark font-bold rounded-full shadow-md text-sm sm:text-base transform hover:scale-105 transition duration-300">
-                <p>FREE Home Delivery Available!</p>
+                <p>FREE Home Delivery for 3KM Radius!</p>
             </div>
         </section>
 
@@ -111,7 +111,7 @@
 
     <!-- Floating Action Buttons -->
     <div class="floating-action-container flex flex-col items-end">
-        <a href="https://wa.me/919398352048?text=Hello%20Isabel,%20I%20saw%20your%20Christmas%20Sweets%20menu%20and%20would%20like%20to%20place%20an%20order." target="_blank" class="fab bg-christmas-green text-white" title="Order on WhatsApp">
+        <a href="https://wa.me/919391339396?text=Hello%20Isabel,%20I%20saw%20your%20Christmas%20Sweets%20menu%20and%20would%20like%20to%20place%20an%20order." target="_blank" class="fab bg-christmas-green text-white" title="Order on WhatsApp">
             <!-- WhatsApp Icon (Custom SVG) -->
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M12.04 2c-5.46 0-9.9 4.44-9.9 9.9 0 1.75.52 3.42 1.49 4.87l-1.55 5.67 5.8-1.51c1.42.78 3.02 1.21 4.16 1.21.03 0 .06 0 .09 0 5.46 0 9.9-4.44 9.9-9.9.01-5.46-4.43-9.9-9.9-9.9zm4.78 13.56c-.23.63-1.07 1.07-1.55 1.13-.5.06-.94.03-1.4-.13-.46-.15-1.07-.3-2.38-1.01-1.63-.9-2.65-2.42-2.85-2.71-.2-.3-.18-.55 0-.82.17-.23.37-.47.59-.72.2-.24.2-.42.3-.64.08-.2.04-.37-.02-.52-.08-.16-.54-1.3-.74-1.78-.2-.47-.41-.4-.54-.42-.14-.02-.29-.02-.45-.02h-.42c-.15 0-.41.05-.63.31-.22.25-.85.83-.85 2.01 0 1.18.87 2.33.99 2.49.12.16 1.71 2.62 4.14 3.65 2.43 1.02 2.91.87 3.45.81.54-.06 1.07-.44 1.23-.74.16-.3.16-.56.11-.74-.06-.18-.23-.29-.48-.41z"/></svg>
         </a>
@@ -145,7 +145,7 @@
                     Place Order via WhatsApp
                 </button>
                 <p class="text-xs text-center text-gray-500 mt-2">
-                    (Order sent to Isabel D'Cruz: 9398352048)
+                    (Order sent to Isabel D'Cruz: 9391339396)
                 </p>
             </div>
         </div>
@@ -196,7 +196,7 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // --- Configuration and Data ---
-            const WHATSAPP_NUMBER = '919398352048'; // Using the number from the footer
+            const WHATSAPP_NUMBER = '919391339396'; // Using the number from the footer
             const APP_NAME = 'Silver Bells Delights';
 
             // Global state to hold the current product being configured
