--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Silver Bells Delights | Christmas Sweets & Savouries</title>
+    <!-- SEO Best Practice: Link to robots.txt -->
+    <link rel="robots" href="robots.txt"> 
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Configure Tailwind CSS and Font -->
