--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             transform: translateX(0);
         }
     </style>
+    <meta name="google-site-verification" content="iq2Rm9xKEe024t48MzEa8z4ntXMAQSuraaDaeLCY7zM" />
 </head>
 <body class="bg-gray-50 font-sans min-h-screen flex flex-col">
 
