--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
     <!-- SEO Best Practice: Link to robots.txt -->
     <link rel="robots" href="robots.txt"> 
     <meta name="google-site-verification" content="YOUR_GSC_VERIFICATION_CODE" />
-    <!-- 
-    1. Replace BOTH 'G-XXXXXXXXXX' instances with your actual GA4 Measurement ID.
-    2. Place this script block inside the <head> tag of your existing index.html.
--->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S173QF32BV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  // IMPORTANT: Replace 'G-XXXXXXXXXX' below
-  gtag('config', 'G-XXXXXXXXXX');
+  gtag('config', 'G-S173QF32BV');
 </script>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
