--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 
   gtag('config', 'G-S173QF32BV');
 </script>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-M24K4L4C');</script>
+<!-- End Google Tag Manager -->
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Configure Tailwind CSS and Font -->
@@ -74,7 +81,10 @@
     <meta name="google-site-verification" content="iq2Rm9xKEe024t48MzEa8z4ntXMAQSuraaDaeLCY7zM" />
 </head>
 <body class="bg-gray-50 font-sans min-h-screen flex flex-col">
-
+     <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M24K4L4C"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
     <!-- Header & Navigation -->
     <header class="bg-christmas-red shadow-lg sticky top-0 z-20">
         <div class="container mx-auto p-4 flex justify-between items-center max-w-7xl">
