--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M24K4L4C"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+
+    <link rel="canonical" href="https://silverbellsdelights-cell.github.io/Silverbellsdelights/">
+    
     <!-- Header & Navigation -->
     <header class="bg-christmas-red shadow-lg sticky top-0 z-20">
         <div class="container mx-auto p-4 flex justify-between items-center max-w-7xl">
@@ -100,6 +104,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </button>
         </div>
     </header>
+
+    
 
     <!-- Main Content Area -->
     <main class="container mx-auto p-4 flex-grow max-w-7xl">
