--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Silver Bells Delights | Christmas Sweets & Savouries</title>
     <!-- SEO Best Practice: Link to robots.txt -->
     <link rel="robots" href="robots.txt"> 
-    <meta name="google-site-verification" content="YOUR_GSC_VERIFICATION_CODE" />
+    <meta name="google-site-verification" content="iq2Rm9xKEe024t48MzEa8z4ntXMAQSuraaDaeLCY7zM"/>" />
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-S173QF32BV"></script>
 <script>
