--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </button>
                 </div>
                 <!-- Image Tag: max-h-56 and object-cover added here to frame the image -->
-                <img id="quickview-image" class="w-full max-h-56 object-cover rounded-lg mb-4 border border-gray-200" src="" alt="Product Image" onerror="this.onerror=null; this.src='https://placehold.co/400x300/FDD835/3D0000?text=Image+Unavailable';">
+                <img id="quickview-image" class="w-full max-h-56 object-cover rounded-lg mb-4 border border-gray-200" src="" alt="Product Image" onerror="this.onerror=null; this.src='images/no_image_available.jpg';">
                 
                 <p id="quickview-description" class="text-gray-600 mb-4"></p>
                 
