--- a/index.html
+++ b/index.html
@@ -25,205 +25,26 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     
     <style>
-       /* ---------------------------------------------------
-STATIC TAILWIND CSS OUTPUT (Replacement for CDN Script)
---------------------------------------------------- */
-
-/* Custom Colors and Fonts defined previously */
-.text-christmas-red { color: #d90000; }
-.bg-christmas-red { background-color: #d90000; }
-.text-christmas-green { color: #008000; }
-.bg-christmas-green { background-color: #008000; }
-.font-fancy { font-family: 'Playfair Display', serif; }
-
-/* Global Base Styles (Preflight/Reset) */
-*, ::before, ::after { box-sizing: border-box; border-width: 0; border-style: solid; border-color: #e5e7eb; }
-::before, ::after { --tw-content: ''; }
-html { line-height: 1.5; -webkit-text-size-adjust: 100%; font-family: 'Inter', sans-serif; }
-body { margin: 0; line-height: inherit; scroll-behavior: smooth; }
-
-/* Utility Classes (Selected subset used in your HTML) */
-.container { width: 100%; margin-right: auto; margin-left: auto; padding-right: 1rem; padding-left: 1rem; }
-@media (min-width: 640px) { .container { max-width: 640px; } }
-@media (min-width: 768px) { .container { max-width: 768px; } }
-@media (min-width: 1024px) { .container { max-width: 1024px; } }
-@media (min-width: 1280px) { .container { max-width: 1280px; } }
-
-.block { display: block; }
-.flex { display: flex; }
-.hidden { display: none; }
-.relative { position: relative; }
-.absolute { position: absolute; }
-.fixed { position: fixed; }
-.inset-0 { top: 0; right: 0; bottom: 0; left: 0; }
-.top-0 { top: 0; }
-.right-0 { right: 0; }
-.left-1\/2 { left: 50%; }
-.z-10 { z-index: 10; }
-.z-40 { z-index: 40; }
-.z-50 { z-index: 50; }
-
-.h-full { height: 100%; }
-.h-48 { height: 12rem; }
-.h-56 { height: 14rem; }
-.h-6 { height: 1.5rem; }
-.h-10 { height: 2.5rem; }
-.w-full { width: 100%; }
-.w-1\/3 { width: 33.333333%; }
-.w-12 { width: 3rem; }
-.w-16 { width: 4rem; }
-.max-w-sm { max-width: 24rem; }
-.max-w-lg { max-width: 32rem; }
-
-.transform { transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)); }
-.-translate-x-1\/2 { --tw-translate-x: -50%; }
-.translate-x-full { --tw-translate-x: 100%; }
-.-translate-y-1 { --tw-translate-y: -0.25rem; }
-.-translate-y-1\/2 { --tw-translate-y: -50%; }
-.scale-95 { --tw-scale-x: 0.95; --tw-scale-y: 0.95; }
-
-.opacity-0 { opacity: 0; }
-.opacity-20 { opacity: 0.2; }
-.opacity-50 { opacity: 0.5; }
-.opacity-80 { opacity: 0.8; }
-.opacity-100 { opacity: 1; }
-
-.transition-all { transition-property: all; transition-duration: 0.3s; transition-timing-function: ease; }
-.duration-300 { transition-duration: 0.3s; }
-.duration-500 { transition-duration: 0.5s; }
-
-.overflow-hidden { overflow: hidden; }
-.overflow-y-auto { overflow-y: auto; }
-.line-clamp-2 { overflow: hidden; display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 2; }
-
-
-/* Spacing, Borders, Shadows, and Text */
-.p-1 { padding: 0.25rem; }
-.p-2 { padding: 0.5rem; }
-.p-3 { padding: 0.75rem; }
-.p-4 { padding: 1rem; }
-.p-5 { padding: 1.25rem; }
-.p-6 { padding: 1.5rem; }
-.py-3 { padding-top: 0.75rem; padding-bottom: 0.75rem; }
-.pb-2 { padding-bottom: 0.5rem; }
-.mb-1 { margin-bottom: 0.25rem; }
-.mb-2 { margin-bottom: 0.5rem; }
-.mb-3 { margin-bottom: 0.75rem; }
-.mb-4 { margin-bottom: 1rem; }
-.mb-6 { margin-bottom: 1.5rem; }
-.mb-8 { margin-bottom: 2rem; }
-.mb-12 { margin-bottom: 3rem; }
-.mt-4 { margin-top: 1rem; }
-.mt-12 { margin-top: 3rem; }
-.ml-4 { margin-left: 1rem; }
-.mr-auto { margin-right: auto; }
-.mx-auto { margin-left: auto; margin-right: auto; }
-.gap-8 { gap: 2rem; }
-.space-x-4 > :not([hidden]) ~ :not([hidden]) { --tw-space-x-reverse: 0; margin-right: calc(1rem * var(--tw-space-x-reverse)); margin-left: calc(1rem * (1 - var(--tw-space-x-reverse))); }
-.space-y-4 > :not([hidden]) ~ :not([hidden]) { --tw-space-y-reverse: 0; margin-top: calc(1rem * (1 - var(--tw-space-y-reverse))); margin-bottom: calc(1rem * var(--tw-space-y-reverse)); }
-.space-y-6 > :not([hidden]) ~ :not([hidden]) { --tw-space-y-reverse: 0; margin-top: calc(1.5rem * (1 - var(--tw-space-y-reverse))); margin-bottom: calc(1.5rem * var(--tw-space-y-reverse)); }
-.space-y-16 > :not([hidden]) ~ :not([hidden]) { --tw-space-y-reverse: 0; margin-top: calc(4rem * (1 - var(--tw-space-y-reverse))); margin-bottom: calc(4rem * var(--tw-space-y-reverse)); }
-
-
-.border-b { border-bottom-width: 1px; }
-.border-t { border-top-width: 1px; }
-.border { border-width: 1px; }
-.border-gray-200 { border-color: #e5e7eb; }
-.border-gray-300 { border-color: #d1d5db; }
-.border-christmas-green { border-color: #008000; }
-.rounded-full { border-radius: 9999px; }
-.rounded-lg { border-radius: 0.5rem; }
-.rounded-md { border-radius: 0.375rem; }
-.rounded-xl { border-radius: 0.75rem; }
-
-.shadow-md { --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1); box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); }
-.shadow-lg { --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); }
-.shadow-2xl { --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25); box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow); }
-
-
-/* Typography */
-.text-center { text-align: center; }
-.text-white { color: #ffffff; }
-.text-gray-500 { color: #6b7280; }
-.text-gray-600 { color: #4b5563; }
-.text-gray-700 { color: #374151; }
-.text-gray-800 { color: #1f2937; }
-.text-red-500 { color: #ef4444; }
-.text-red-700 { color: #b91c1c; }
-.text-green-600 { color: #008000; }
-.text-amber-500 { color: #f59e0b; }
-
-.text-xs { font-size: 0.75rem; line-height: 1rem; }
-.text-sm { font-size: 0.875rem; line-height: 1.25rem; }
-.text-base { font-size: 1rem; line-height: 1.5rem; }
-.text-lg { font-size: 1.125rem; line-height: 1.75rem; }
-.text-xl { font-size: 1.25rem; line-height: 1.75rem; }
-.text-2xl { font-size: 1.5rem; line-height: 2rem; }
-.text-3xl { font-size: 1.875rem; line-height: 2.25rem; }
-.text-4xl { font-size: 2.25rem; line-height: 2.5rem; }
-.text-5xl { font-size: 3rem; line-height: 1; }
-.text-7xl { font-size: 4.5rem; line-height: 1; }
-.font-bold { font-weight: 700; }
-.font-semibold { font-weight: 600; }
-.leading-tight { line-height: 1.25; }
-.leading-none { line-height: 1; }
-.uppercase { text-transform: uppercase; }
-.tracking-widest { letter-spacing: 0.1em; }
-
-
-/* Backgrounds and Interaction */
-.bg-black { background-color: #000000; }
-.bg-white { background-color: #ffffff; }
-.bg-gray-100 { background-color: #f3f4f6; }
-.bg-gray-50 { background-color: #f9fafb; }
-.bg-green-600 { background-color: #049216; }
-.bg-opacity-20 { --tw-bg-opacity: 0.2; }
-.bg-opacity-50 { --tw-bg-opacity: 0.5; }
-.bg-opacity-70 { --tw-bg-opacity: 0.7; }
-.hover\:bg-gray-200:hover { background-color: #e5e7eb; }
-.hover\:bg-christmas-green:hover { background-color: #008000; }
-.hover\:bg-christmas-red:hover { background-color: #d90000; }
-.hover\:bg-green-700:hover { background-color: #049216; }
-.hover\:text-gray-200:hover { color: #e5e7eb; }
-.hover\:text-gray-800:hover { color: #1f2937; }
-.hover\:text-christmas-red:hover { color: #d90000; }
-.hover\:text-christmas-green:hover { color: #008000; }
-.hover\:text-red-700:hover { color: #b91c1c; }
-.disabled\:opacity-50:disabled { opacity: 0.5; }
-
-/* Flex/Grid Alignment */
-.items-start { align-items: flex-start; }
-.items-center { align-items: center; }
-.items-end { align-items: flex-end; }
-.justify-end { justify-content: flex-end; }
-.justify-center { justify-content: center; }
-.justify-between { justify-content: space-between; }
-.flex-col { flex-direction: column; }
-.flex-grow { flex-grow: 1; }
-.grid-cols-1 { grid-template-columns: repeat(1, minmax(0, 1fr)); }
-
-/* Responsive Media Queries */
-@media (min-width: 640px) {
-    .sm\:grid-cols-2 { grid-template-columns: repeat(2, minmax(0, 1fr)); }
-}
-@media (min-width: 768px) {
-    .md\:flex { display: flex; }
-    .md\:hidden { display: none; }
-    .md\:w-1\/3 { width: 33.333333%; }
-    .md\:flex-row { flex-direction: row; }
-    .md\:text-2xl { font-size: 1.5rem; line-height: 2rem; }
-    .md\:text-5xl { font-size: 3rem; line-height: 1; }
-    .md\:text-7xl { font-size: 4.5rem; line-height: 1; }
-    .md\:py-24 { padding-top: 6rem; padding-bottom: 6rem; }
-}
-@media (min-width: 1024px) {
-    .lg\:w-1\/2 { width: 50%; }
-    .lg\:flex-row { flex-direction: row; }
-    .lg\:grid-cols-3 { grid-template-columns: repeat(3, minmax(0, 1fr)); }
-}
-@media (min-width: 1280px) {
-    .xl\:grid-cols-4 { grid-template-columns: repeat(4, minmax(0, 1fr)); }
-}
+       <!-- Load Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Configure Tailwind CSS and Font -->
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'christmas-red': '#C53030', /* Darker Red */
+                        'christmas-green': '#10743B', /* Darker Green */
+                        'christmas-gold': '#FDD835', /* Bright Gold */
+                        'accent-dark': '#3D0000',
+                    },
+                    fontFamily: {
+                        sans: ['Inter', 'sans-serif'],
+                    },
+                }
+            }
+        }
+    </script>
 
 
         
