Update and rename index (3).html to index.html

--- a/index.html
+++ b/index.html
@@ -27,22 +27,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Configure Tailwind CSS and Font -->
     <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        'christmas-red': '#C53030', /* Darker Red */
-                        'christmas-green': '#10743B', /* Darker Green */
-                        'christmas-gold': '#FDD835', /* Bright Gold */
-                        'accent-dark': '#3D0000',
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                    },
-                }
-            }
-        }
-    </script>
+    <link rel="stylesheet" href="css/tailwind.min.css">
     <style>
         /* Custom scrollbar for better aesthetics */
         .scrollbar-hide::-webkit-scrollbar {
