--- a/index.html
+++ b/index.html
@@ -255,9 +255,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             // basePrice is the price for 1 KG OR 1 PIECE, depending on configType.
             const rawProducts = [
                 // Weight Configurable Products (Cakes: price is for 1 KG)
-                { id: 'rum_cake', name: 'Rum Cake', category: 'Cakes', basePrice: 750, configType: 'weight', unitLabel: 'per KG', description: 'Rich, moist cake soaked in rum—a traditional Christmas favorite.', image_file: 'images/rum_cake.jpg' },
-                { id: 'wine_cake', name: 'Wine Cake', category: 'Cakes', basePrice: 700, configType: 'weight', unitLabel: 'per KG', description: 'A delicate cake baked with fine wine, perfect for the festive table.', image_file: 'images/wine_cake.jpg' },
-                { id: 'ribbon_cake', name: 'Ribbon Cake', category: 'Cakes', basePrice: 600, configType: 'weight', unitLabel: 'per KG', description: 'Classic layered ribbon cake with light, colorful icing.', image_file: 'images/ribbon cake.jpg' },
+                { id: 'rum_cake', name: 'Rum Cake', category: 'Cakes', basePrice: 750, configType: 'weight', unitLabel: 'per KG', description: 'Rich, moist cake soaked in rum—a traditional Christmas favorite.', image_file: 'images/rum_cake.webp' },
+                { id: 'wine_cake', name: 'Wine Cake', category: 'Cakes', basePrice: 700, configType: 'weight', unitLabel: 'per KG', description: 'A delicate cake baked with fine wine, perfect for the festive table.', image_file: 'images/wine_cake.webp' },
+                { id: 'ribbon_cake', name: 'Ribbon Cake', category: 'Cakes', basePrice: 600, configType: 'weight', unitLabel: 'per KG', description: 'Classic layered ribbon cake with light, colorful icing.', image_file: 'images/ribbon cake.webp' },
 
                 // Piece Configurable Products (Rose Cookies: price is for 1 piece)
                 { id: 'rose_cookies', name: 'Rose Cookies', category: 'Sweets', basePrice: 10, configType: 'piece', unitLabel: 'per piece', description: 'Crispy, flower-shaped deep-fried cookies (Achappam). Price is ₹10 per piece.', image_file: 'images/rose_cookies.jpg' },
