--- a/index.html
+++ b/index.html
@@ -260,24 +260,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 { id: 'ribbon_cake', name: 'Ribbon Cake', category: 'Cakes', basePrice: 600, configType: 'weight', unitLabel: 'per KG', description: 'Classic layered ribbon cake with light, colorful icing.', image_file: 'images/ribbon cake.webp' },
 
                 // Piece Configurable Products (Rose Cookies: price is for 1 piece)
-                { id: 'rose_cookies', name: 'Rose Cookies', category: 'Sweets', basePrice: 10, configType: 'piece', unitLabel: 'per piece', description: 'Crispy, flower-shaped deep-fried cookies (Achappam). Price is ₹10 per piece.', image_file: 'images/rose_cookies.jpg' },
+                { id: 'rose_cookies', name: 'Rose Cookies', category: 'Sweets', basePrice: 10, configType: 'piece', unitLabel: 'per piece', description: 'Crispy, flower-shaped deep-fried cookies (Achappam). Price is ₹10 per piece.', image_file: 'images/rose_cookies.webp' },
                 
                 // Default 1 KG Sweets (no configuration needed in modal, set to basePrice * 1)
-                { id: 'kal_kals', name: 'Jaggery Kal Kals', category: 'Sweets', basePrice: 400, unitLabel: 'per 1 KG', configType: 'none', description: 'Traditional Christmas sweet shell-shaped pastries coated in jaggery syrup.', image_file: 'images/jaggery_kal_kals1.jpg' },
-                { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', basePrice: 450, unitLabel: 'per 1 KG', configType: 'none', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/coconut_puffs.jpg' },
-                { id: 'adrasams', name: 'Adrasams', category: 'Sweets', basePrice: 420, unitLabel: 'per 1 KG', configType: 'none', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams_1.jpg' },
-                { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', basePrice: 860, unitLabel: 'per 1 KG', configType: 'none', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese1.jpg' },
-                { id: 'sweet_biscuit', name: 'Sweet Biscuit', category: 'Sweets', basePrice: 450, unitLabel: 'per 1 KG', configType: 'none', description: 'Simple, sweet homemade biscuits.', image_file: 'images/sweet_biscuits.jpg' },
+                { id: 'kal_kals', name: 'Jaggery Kal Kals', category: 'Sweets', basePrice: 400, unitLabel: 'per 1 KG', configType: 'none', description: 'Traditional Christmas sweet shell-shaped pastries coated in jaggery syrup.', image_file: 'images/jaggery_kal_kals1.webp' },
+                { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', basePrice: 450, unitLabel: 'per 1 KG', configType: 'none', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/coconut_puffs.webp' },
+                { id: 'adrasams', name: 'Adrasams', category: 'Sweets', basePrice: 420, unitLabel: 'per 1 KG', configType: 'none', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams_1.webp' },
+                { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', basePrice: 860, unitLabel: 'per 1 KG', configType: 'none', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese1.webp' },
+                { id: 'sweet_biscuit', name: 'Sweet Biscuit', category: 'Sweets', basePrice: 450, unitLabel: 'per 1 KG', configType: 'none', description: 'Simple, sweet homemade biscuits.', image_file: 'images/sweet_biscuits.webp' },
 
                 // Weight Configurable Savouries (price is for 1 KG)
-                { id: 'masala_murukulu', name: 'Masala Murukulu', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Spicy, crunchy spiral snack with aromatic spices.', image_file: 'images/masala_murukulus.jpg' },
-                { id: 'masala_murukulu_stick', name: 'Masala Murukulu Stick', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Crispy stick-shaped version of the spicy murukulu.', image_file: 'images/masala_murukulu_stick.jpg' }, 
+                { id: 'masala_murukulu', name: 'Masala Murukulu', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Spicy, crunchy spiral snack with aromatic spices.', image_file: 'images/masala_murukulus.webp' },
+                { id: 'masala_murukulu_stick', name: 'Masala Murukulu Stick', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Crispy stick-shaped version of the spicy murukulu.', image_file: 'images/masala_murukulu_stick.webp' }, 
                 { id: 'sakinula', name: 'Sakinalu', category: 'Savouries', basePrice: 480, configType: 'weight', unitLabel: 'per KG', description: 'A traditional Telangana delicacy, thin crispy spirals.', image_file: 'images/sakinula.jpg' },
-                { id: 'palli_murukulu_papad', name: 'Palli Murukulu Papad', category: 'Savouries', basePrice: 480, configType: 'weight', unitLabel: 'per KG', description: 'Crunchy snack combined with groundnuts (palli).', image_file: 'images/palli_murukulu_papad.jpg' }, 
-                { id: 'masala_murukulu_small', name: 'Masala Murukulu', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu_small.jpg' }, 
+                { id: 'palli_murukulu_papad', name: 'Palli Murukulu Papad', category: 'Savouries', basePrice: 480, configType: 'weight', unitLabel: 'per KG', description: 'Crunchy snack combined with groundnuts (palli).', image_file: 'images/palli_murukulu_papad.webp' }, 
+                { id: 'masala_murukulu_small', name: 'Masala Murukulu', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu_small.webp' }, 
                 
                 // Default 1 KG Meat (no configuration)
-                { id: 'salted_beef', name: 'Salted Beef (Raw)', category: 'Meat', basePrice: 750, unitLabel: 'per 1 KG', configType: 'none', description: 'High-quality raw salted beef, ready for curing or cooking.', image_file: 'images/salted_beef.jpg' },
+                { id: 'salted_beef', name: 'Salted Beef (Raw)', category: 'Meat', basePrice: 750, unitLabel: 'per 1 KG', configType: 'none', description: 'High-quality raw salted beef, ready for curing or cooking.', image_file: 'images/salted_beef.webp' },
             ];
 
             // Map the raw product data to include the correct image source (either file path or placeholder)
