--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 // Weight Configurable Savouries (price is for 1 KG)
                 { id: 'masala_murukulu', name: 'Masala Murukulu', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Spicy, crunchy spiral snack with aromatic spices.', image_file: 'images/masala_murukulus.webp' },
                 { id: 'masala_murukulu_stick', name: 'Masala Murukulu Stick', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Crispy stick-shaped version of the spicy murukulu.', image_file: 'images/masala_murukulu_stick.webp' }, 
-                { id: 'sakinula', name: 'Sakinalu', category: 'Savouries', basePrice: 480, configType: 'weight', unitLabel: 'per KG', description: 'A traditional Telangana delicacy, thin crispy spirals.', image_file: 'images/sakinula.jpg' },
+                { id: 'sakinula', name: 'Sakinalu', category: 'Savouries', basePrice: 480, configType: 'weight', unitLabel: 'per KG', description: 'A traditional Telangana delicacy, thin crispy spirals.', image_file: 'images/sakinula.webp' },
                 { id: 'palli_murukulu_papad', name: 'Palli Murukulu Papad', category: 'Savouries', basePrice: 480, configType: 'weight', unitLabel: 'per KG', description: 'Crunchy snack combined with groundnuts (palli).', image_file: 'images/palli_murukulu_papad.webp' }, 
-                { id: 'masala_murukulu_small', name: 'Masala Murukulu', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu_small.webp' }, 
+                { id: 'masala_murukulu_small', name: 'Masala Murukulu Small', category: 'Savouries', basePrice: 450, configType: 'weight', unitLabel: 'per KG', description: 'Smaller pieces of the groundnut murukulu.', image_file: 'images/masala_murukulu_small.webp' }, 
                 
                 // Default 1 KG Meat (no configuration)
                 { id: 'salted_beef', name: 'Salted Beef (Raw)', category: 'Meat', basePrice: 750, unitLabel: 'per 1 KG', configType: 'none', description: 'High-quality raw salted beef, ready for curing or cooking.', image_file: 'images/salted_beef.webp' },
