--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 
                 // Default 1 KG Sweets (no configuration needed in modal, set to basePrice * 1)
                 { id: 'kal_kals', name: 'Jaggery Kal Kals', category: 'Sweets', basePrice: 400, unitLabel: 'per 1 KG', configType: 'none', description: 'Traditional Christmas sweet shell-shaped pastries coated in jaggery syrup.', image_file: 'images/jaggery_kal_kals1.webp' },
-                { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', basePrice: 450, unitLabel: 'per 1 KG', configType: 'none', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/coconut_puffs.webp' },
+                { id: 'coconut_puffs', name: 'Sweet Coconut Puffs', category: 'Sweets', basePrice: 450, unitLabel: 'per 1 KG', configType: 'none', description: 'Flaky puffs filled with sweet, grated coconut.', image_file: 'images/coconut_puffs1.webp' },
                 { id: 'adrasams', name: 'Adrasams', category: 'Sweets', basePrice: 420, unitLabel: 'per 1 KG', configType: 'none', description: 'South Indian festive sweet made from rice flour and jaggery.', image_file: 'images/adrasams_1.webp' },
                 { id: 'guava_cheese', name: 'Guava Cheese', category: 'Sweets', basePrice: 860, unitLabel: 'per 1 KG', configType: 'none', description: 'Firm, translucent confection made from fresh guava fruit pulp.', image_file: 'images/guava_cheese1.webp' },
                 { id: 'sweet_biscuit', name: 'Sweet Biscuit', category: 'Sweets', basePrice: 450, unitLabel: 'per 1 KG', configType: 'none', description: 'Simple, sweet homemade biscuits.', image_file: 'images/sweet_biscuits.webp' },
