--- a/index.html
+++ b/index.html
@@ -23,6 +23,48 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-M24K4L4C');</script>
 <!-- End Google Tag Manager -->
+    <!-- Schema.org JSON-LD Structured Data -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    // ... (Paste the content here) ...
+    {
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "WebSite",
+      "@id": "https://silverbellsdelights-cell.github.io/Silverbellsdelights/#website",
+      "url": "https://silverbellsdelights-cell.github.io/Silverbellsdelights/",
+      "name": "Silver Bells Delights",
+      "description": "Hyderabad's homemade Christmas sweets, savouries, and cakes, freshly made by Isabel Besterwitch D'Cruz.",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://www.google.com/search?q=Silver+Bells+Delights",
+        "query-input": "required name=search_term_string"
+      }
+    },
+    {
+      "@type": "LocalBusiness",
+      "@id": "https://silverbellsdelights-cell.github.io/Silverbellsdelights/#localbusiness",
+      "name": "Silver Bells Delights",
+      "url": "https://silverbellsdelights-cell.github.io/Silverbellsdelights/",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Hyderabad",
+        "addressCountry": "IN"
+      },
+      "telephone": "+919391339396",
+      "priceRange": "₹₹",
+      "hasMap": "https://www.google.com/maps/search/Homemade+Christmas+Sweets+Hyderabad"
+    }
+  ]
+}
+  ]
+}
+</script>
+
+    
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Configure Tailwind CSS and Font -->
