--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 })(window,document,'script','dataLayer','GTM-M24K4L4C');</script>
 <!-- End Google Tag Manager -->
 
+    <!-- Start Being -->
+<meta name="msvalidate.01" content="BFDF33121414649C5EFA7A82C4AF1476" />
+    <!-- End Bing -->
 
     
     <!-- Load Tailwind CSS -->
